ignore comments on html parser

--- a/src/gophercises/html-link-parser/ex2.html
+++ b/src/gophercises/html-link-parser/ex2.html
@@ -7,6 +7,7 @@
   <div>
     <a href="https://www.twitter.com/joncalhoun">
       Check me out on twitter
+      <!-- HELLO -->
       <i class="fa fa-twitter" aria-hidden="true"></i>
     </a>
     <a href="https://github.com/gophercises">
